# SimpleRayTracer

./: CMakeLists.txt  README.md
src/: camera.h  histogram.h  lambertian.h  main.cpp  material.h  math_util.h  metal.h  ray.h  sphere.h  surface.h  surface_list.h  vec3.h
src/lodepng/: lodepng.h
